--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 My One Page Website</p>
+        <p>&copy; 2024 Dhea Nickyta Az Zahra</p>
     </footer>
 
     <script src="scripts.js"></script>
