--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My One Page Website</h1>
+        <h1>CyberBullying</h1>
         <nav>
             <ul>
                 <!-- <li><a href="#section1">Section 1</a></li> -->
